[gd_scene load_steps=13 format=3 uid="uid://cavtoyignhfdw"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_01cka"]
[ext_resource type="Texture2D" uid="uid://3y4grxowlvbq" path="res://main graphica/UI/bluebarEmpty.png" id="2_cfkih"]
[ext_resource type="Texture2D" uid="uid://huf2psqr51nb" path="res://main graphica/UI/blueBarOutline.png" id="3_ihbma"]
[ext_resource type="Texture2D" uid="uid://dli4qqch0vf63" path="res://main graphica/UI/bluebarfull.png" id="4_rmh6x"]
[ext_resource type="Texture2D" uid="uid://rd3mi6oc7rvf" path="res://main graphica/UI/emptyHealth.png" id="5_k4xr3"]
[ext_resource type="Texture2D" uid="uid://bi7nb7vqnjepp" path="res://main graphica/UI/outline.png" id="6_x3hdq"]
[ext_resource type="Texture2D" uid="uid://bv2wsu5o4yyom" path="res://main graphica/UI/fullHealth.png" id="7_ag4vq"]
[ext_resource type="AudioStream" uid="uid://dnnlj868i0bbw" path="res://audio/Zombie Game.wav" id="8_qtaxu"]
[ext_resource type="AudioStream" uid="uid://b1r0udolr7hd2" path="res://audio/Zombie Night.wav" id="9_1x08q"]

[sub_resource type="Animation" id="Animation_geba0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="Animation" id="Animation_ch2xq"]
resource_name = "day night"
length = 100.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rrhkw"]
_data = {
"RESET": SubResource("Animation_geba0"),
"day night": SubResource("Animation_ch2xq")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_01cka")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.02
anchor_right = 0.625
anchor_bottom = 0.057
offset_left = 130.0
offset_right = -130.0
offset_bottom = 0.0999985
grow_horizontal = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("2_cfkih")
texture_over = ExtResource("3_ihbma")
texture_progress = ExtResource("4_rmh6x")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 30)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer2"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("5_k4xr3")
texture_over = ExtResource("6_x3hdq")
texture_progress = ExtResource("7_ag4vq")

[node name="MarginContainer4" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "score"

[node name="Label2" type="Label" parent="MarginContainer4/HBoxContainer"]
layout_mode = 2

[node name="day" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="day"]
stream = ExtResource("8_qtaxu")

[node name="night" type="Timer" parent="."]
wait_time = 50.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="night"]
stream = ExtResource("9_1x08q")
volume_db = 24.0
pitch_scale = 0.01

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rrhkw")
}

[connection signal="timeout" from="day" to="." method="_on_day_timeout"]
[connection signal="timeout" from="night" to="." method="_on_night_timeout"]
